# chat-app

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  main.cpp
proto/: chat.proto
src/client/: client.cpp  client.h  main.cpp
src/common/: message_framer.cpp  message_framer.h
src/server/: chat_server.cpp  chat_server.h  main.cpp  session.cpp  session.h  session_manager.cpp  session_manager.h
tests/: test_framer.cpp  test_protobuf.cpp
